fix: layout issues with hamburger menu and main content on responsive mode

--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
 .main {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 5rem;
   margin-top: 40px;
 }
@@ -106,6 +107,10 @@ body {
 .products__card {
   display: flex;
   justify-content: space-evenly;
+  overflow-x: auto;
+  scroll-behavior: smooth;
+  padding: 1rem 2rem;
+  gap: 2rem;
 }
 
 .product {
@@ -137,6 +142,10 @@ body {
 }
 
 @media screen and (max-width: 780px) {
+  .body__no-scroll {
+    overflow: hidden;
+  }
+
   .header__menu-open-button,
   .header__nav-close-button {
     display: block;
